@@ -10,9 +10,12 @@ if you plan on using it.
 * Added hierarchical url handling as well on the interal
 mechanism.  You especially want the {metadata} tag with
 this option.  It's on in new installs.
+* Fixed bug with {stylesheet name=""} not working properly
 * Fixed bug where default template could be set inactive
 * Fixed bug where an inactive template set to default would
 not be made active automatically
+* Fixed bug with deleting multiple pages and not having
+hierarchy gettin reset properly
 * Modified config.php file so that it explains what the
 different options are
 
